--- a/themes/abound/css/AdminLTE.css
+++ b/themes/abound/css/AdminLTE.css
@@ -1283,8 +1283,8 @@ a:focus {
 /* Input group */
 .input-group .input-group-addon {
   border-radius: 0;
-  border-color: #d2d6de;
-  background-color: #fff;
+  border-color: #d2d6de !important;
+  background-color: #f2f3f5;
 }
 /* button groups */
 .btn-group-vertical .btn.btn-flat:first-of-type,
