--- a/themes/abound/css/AdminLTE.css
+++ b/themes/abound/css/AdminLTE.css
@@ -662,7 +662,6 @@ a:focus {
 .sidebar-menu,
 .main-sidebar .user-panel,
 .sidebar-menu > li.header {
-  white-space: nowrap;
   overflow: hidden;
 }
 .sidebar-menu:hover {
@@ -4639,4 +4638,60 @@ ul.wysihtml5-toolbar > li {
 }
 .dz-hidden-input{
   display: none !important;
+}
+
+
+.push-notification{
+  position: fixed;
+  display: block;
+  bottom: 15px;
+  left: 15px;
+  width: 300px;
+  height: auto;
+  max-height: 80%;
+  overflow: hidden;
+  padding: 8px;
+}
+
+.push-notification .push-item{
+  display: block;
+  width: 100%;
+  height: 60px;
+  overflow: hidden;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background-color: #444;
+  border: 1px solid #FFDA4480;
+  -webkit-box-shadow:  4px 4px 8px rgba(0,0,0,0.4);
+  -moz-box-shadow:  4px 4px 8px rgba(0,0,0,0.4);
+  box-shadow:  4px 4px 8px rgba(0,0,0,0.4);
+  margin-bottom: 5px;
+  padding-right: 40px;
+  position: relative;
+}
+
+.push-notification .push-item .bell-icon{
+  display: inline-block;
+  overflow: hidden;
+  width: 34px;
+  top: 13px;
+  right: 10px;
+  position: absolute;
+  height: 34px;
+  background: url("../svg/bell.svg") no-repeat scroll center transparent;
+  background-size: cover;
+}
+.push-notification .push-item h5{
+  color: #fff;
+  padding: 5px 15px 5px 25px;
+}
+.push-notification .push-item h5 small{
+  color: #aaa;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
+  margin-top: 5px;
+  line-height: 15px;
 }
